# myfirst-actix-web

./: .env  .gitignore  Cargo.toml  docker-compose.yml  migration.sql
.runtime/psql_data/: postmaster.pid
.runtime/psql_data/base/16384/: 1247  1249  1259  2224  24577  24578  24582  24584  24585  24590  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
.runtime/psql_data/global/: 1260  1262  2671  pg_control  pg_internal.init
.runtime/psql_data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
src/: config.rs  handler.rs  main.rs  model.rs  repository.rs
