[package]
name = "myfirst-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.0.0-beta.15"}
serde = { version = "1.0.104", features = ["derive"] }
config = "0.11.0"
dotenv = "0.15.0"
deadpool-postgres = {version = "0.10.1", features = ["serde"]}
tokio-postgres = "0.7.5"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"